--- a/Zomato_RatingsProject.ipynb
+++ b/Zomato_RatingsProject.ipynb
@@ -5060,6 +5060,30 @@
     "# show plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b847d22f",
+   "metadata": {},
+   "source": [
+    "**CONCLUSION**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "477d8fe9",
+   "metadata": {},
+   "source": [
+    "The project aims to provide actionable insights from Zomato’s restaurant data by analyzing various features like ratings, price range, and locality. It includes steps for cleaning and preprocessing the data, followed by visual exploration to identify trends. The project is particularly beneficial for food lovers and elderly diners seeking affordable and enjoyable dining experiences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60837395",
+   "metadata": {},
+   "source": [
+    "Future directions could include predictive modeling for customer satisfaction or clustering restaurants based on similarities."
+   ]
   }
  ],
  "metadata": {
